2009-12-18  Anthony Green  <green@spindazzle.org>

	* javascripts/builder.js, javascripts/controls.js,
	javascripts/dragdrop.js, javascripts/effects.js,
	javascripts/MIT-LICENSE, javascripts/prototype.js,
	javascripts/scriptaculous.js, javascripts/slider.js,
	javascripts/sound.js, javascripts/unittest.js: New files.

2009-12-17  Anthony Green  <green@spindazzle.org>

	* WEB-INF/lib/README: New file.
	* WEB-INF/lib/gpl.html: New file.
	* WEB-INF/lib/LICENSE-2.0.txt: New file.

2009-12-14  Anthony Green  <green@spindazzle.org>

	* WEB-INF/lisp/libs/anaphora-0.9.3: Import.

2009-12-14  Anthony Green  <green@spindazzle.org>

	* WEB-INF/lisp/libs/blow/blow.asd (:blow): Depend on parenscript
	package.
	* WEB-INF/lisp/libs/parenscript-20090921: Imported.

2009-12-11  Anthony Green  <green@spindazzle.org>

	* WEB-INF/classes/org/spindazzle/BlowServlet.java: Update for ABCL
	0.17.0.
	* WEB-INF/lisp/libs/blow/blow.asd: Add rdf.lisp.  Update version.
	* WEB-INF/lib/abcl.jar: Update to ABCL 0.17.0.
	* WEB-INF/lisp/libs/cl-ppcre-2.0.3: Upgrade.
	* WEB-INF/lisp/libs/cl-who-11.1: Upgrade.
	* WEB-INF/lisp/libs/cl-emb-0.4.4: Upgrade.

2008-07-04  Anthony Green  <green@spindazzle.org>

	* index.blo: Update.

2008-07-03  Anthony Green  <green@spindazzle.org>

	* WEB-INF/lisp/libs/_blowboot.lisp ("org.spindazzle.BlowServlet"):
	define this for use in lisp code.
	* Makefile: Make dist target more generic.

2007-10-28  Anthony Green  <green@spindazzle.org>

	* WEB-INF/web.xml: Change servlet mapping to only handle *.blo files.
	* WEB-INF/lisp/webapp.lisp (create-conditional-dispatcher):
	Correct.  Must simplify this.
	* index.jsp: New file.
	* WEB-INF/src/abcl-0.0.10.tar.gz: New file.
	* WEB-INF/lib/abcl.jar: New file.
	* style.css (margin-left): Tweak to match web docs.

2007-10-28  Anthony Green  <green@spindazzle.org>

	* Makefile (dist): Don't exclude .jar files.
	* WEB-INF/src/abcl-0.0.10.tar.gz: New file.
	* WEB-INF/lib/abcl-0.0.10.jar: New file.
